app/javascript/flavours/polyam/styles/components/columns.scss
.column__wrapper {
  display: flex;
  flex: 1 1 auto;
  position: relative;
}

.columns-area {
  display: flex;
  flex: 1 1 auto;
  flex-direction: row;
  justify-content: flex-start;
  overflow-x: auto;
  position: relative;

  &.unscrollable {
    overflow-x: hidden;
  }

  &__panels {
    display: flex;
    justify-content: center;
    gap: 16px;
    width: 100%;
    height: 100%;
    min-height: 100vh;

    &__pane {
      height: 100%;
      overflow: hidden;
      pointer-events: none;
      display: flex;
      justify-content: flex-end;
      min-width: 285px;

      &--start {
        justify-content: flex-start;
      }

      &__inner {
        position: fixed;
        width: 285px;
        pointer-events: auto;
        height: 100%;
      }
    }

    &__main {
      box-sizing: border-box;
      width: 100%;
      flex: 0 0 auto;
      display: flex;
      flex-direction: column;

      @media screen and (min-width: $no-gap-breakpoint) {
        max-width: 600px;
      }
    }
  }
}

$ui-header-height: 55px;

.ui__header {
  display: none;
  box-sizing: border-box;
  height: $ui-header-height;
  position: sticky;
  top: 0;
  z-index: 3;
  justify-content: space-between;
  align-items: center;
  backdrop-filter: var(--background-filter);

  &__logo {
    display: inline-flex;
    padding: 15px;

    .logo {
      height: $ui-header-height - 30px;
      width: auto;
    }

    .logo--wordmark {
      display: none;
    }

    @media screen and (width >= 320px) {
      .logo--wordmark {
        display: block;
      }

      .logo--icon {
        display: none;
      }
    }
  }

  &__links {
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 0 10px;
    overflow: hidden;

    .button {
      flex: 0 0 auto;
    }

    .button-tertiary {
      flex-shrink: 1;
    }

    .icon {
      width: 19px;
      height: 19px;
    }
  }
}

.tabs-bar__wrapper {
  background: var(--background-color-tint);
  backdrop-filter: var(--background-filter);
  position: sticky;
  top: $ui-header-height;
  z-index: 2;
  padding-top: 0;

  @media screen and (min-width: $no-gap-breakpoint) {
    padding-top: 10px;
    top: 0;
  }
}

.react-swipeable-view-container {
  &,
  .columns-area,
  .column {
    height: 100%;
  }
}

.react-swipeable-view-container > * {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.column {
  width: 350px;
  position: relative;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;

  > .scrollable {
    border: 1px solid var(--background-border-color);
    border-top: 0;
    border-radius: 0 0 4px 4px;

    &.about,
    &.privacy-policy {
      border-top: 1px solid var(--background-border-color);
      border-radius: 4px;
    }
  }
}

.ui {
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

// Polyam: Split from .column, .drawer
.column {
  @include column-drawer;
}

@media screen and (width >= 631px) {
  .columns-area {
    padding: 0;
  }

  .column,
  .drawer {
    flex: 0 0 auto;
    padding: 10px;
    padding-inline-start: 5px;
    padding-inline-end: 5px;

    &:first-child {
      padding-inline-start: 10px;
    }

    &:last-child {
      padding-inline-end: 10px;
    }
  }

  .columns-area > div {
    .column,
    .drawer {
      padding-inline-start: 5px;
      padding-inline-end: 5px;
    }
  }
}

// .columns-area--mobile (Moved to single-column.scss by upstream)

.column-link--transparent .icon-with-badge__badge {
  border-color: var(--background-color);
}

.column-title {
  text-align: center;
  padding-bottom: 32px;

  h3 {
    font-size: 24px;
    line-height: 1.5;
    font-weight: 700;
    margin-bottom: 10px;
  }

  p {
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    color: $darker-text-color;
  }

  @media screen and (width >= 600px) {
    padding: 40px;
  }
}

.onboarding__footer {
  margin-top: 30px;
  color: $dark-text-color;
  text-align: center;
  font-size: 14px;

  .link-button {
    display: inline-block;
    color: inherit;
    font-size: inherit;
  }
}

.onboarding__link {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
  color: $highlight-text-color;
  background: lighten($ui-base-color, 4%);
  border-radius: 8px;
  padding: 10px 15px;
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 500;
  height: 56px;
  text-decoration: none;

  svg {
    height: 1.5em;
  }

  &:hover,
  &:focus,
  &:active {
    background: lighten($ui-base-color, 8%);
  }
}

.onboarding__illustration {
  display: block;
  margin: 0 auto;
  margin-bottom: 10px;
  max-height: 200px;
  width: auto;
}

.onboarding__lead {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: $darker-text-color;
  text-align: center;
  margin-bottom: 30px;

  strong {
    font-weight: 700;
    color: $secondary-text-color;
  }
}

.onboarding__links {
  margin-bottom: 30px;

  & > * {
    margin-bottom: 2px;

    &:last-child {
      margin-bottom: 0;
    }
  }
}
/* ... */

